partconf (1.09) UNRELEASED; urgency=low

  * Colin Watson
    - Use libparted to iterate over disks and partitions rather than walking
      over /dev/discs/ in devfs.

 -- Colin Watson <cjwatson@debian.org>  Tue, 31 May 2005 13:13:02 +0100

partconf (1.08) unstable; urgency=low

  * Christian Perrier
    - Add a comment about the Choices length for translators
      in the debconf templates file
  * Colin Watson
    - get_all_partitions()'s symlink handling in /dev/discs was incorrect in
      places, and broke when using udev. Replace it with use of
      canonicalize_file_name().
    - Use getopt_long() for find-partitions option parsing. Support -i as
      short version of --ignore-fstype.
    - Add find-partitions -c/--colons output mode, which is easier to parse
      from shell.
    - Add find-partitions -f/--flag option to display only partitions with a
      given parted flag set.
  * Updated translations:
    - Bulgarian (bg.po) by Ognyan Kulev
    - Catalan (ca.po) by Guillem Jover
    - Czech (cs.po) by Miroslav Kure
    - German (de.po) by Herbert Straub
    - Greek, Modern (1453-) (el.po) by Kostas Papadimas
    - Spanish (es.po) by Enrique Matias Sanchez
    - Gallegan (gl.po) by Jacobo Tarrio
    - Hebrew (he.po) by Lior Kaplan
    - Portuguese (pt.po) by Miguel Figueiredo
    - Portuguese (Brazil) (pt_BR.po) by Carlos Eduardo Pedroza Santiviago
    - Turkish (tr.po) by Recai Oktaş
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Colin Watson <cjwatson@debian.org>  Wed, 11 May 2005 11:30:37 +0100

partconf (1.07) unstable; urgency=low

  * Thiemo Seufer
    - Don't put empty directories in partconf which are also used in
      partconf-mkfstab, otherwise partconf might get purged
      inadvertently.
  * Updated translations: 
    - Italian (it.po) by Stefano Canepa

 -- Thiemo Seufer <ths@debian.org>  Fri, 04 Feb 2005 17:36:51 +0100

partconf (1.06) unstable; urgency=low

  * Colin Watson