@@ -3,6 +3,10 @@ partconf (1.09) UNRELEASED; urgency=low
   * Colin Watson
     - Use libparted to iterate over disks and partitions rather than walking
       over /dev/discs/ in devfs.
+    - Add a mountpoint program (in partconf-mkfstab) which prints sensible
+      default mount points for filesystems that can usefully be mounted
+      automatically. The default mount points are in /media to match the
+      behaviour of pmount.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 31 May 2005 13:13:02 +0100
 
